--- a/app/src/main/res/layout/display_activity.xml
+++ b/app/src/main/res/layout/display_activity.xml
@@ -14,6 +14,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         tools:context="com.example.android.popularmovies.DisplayActivity"
+        android:id="@+id/backdrop"
         android:background="#690000">
 
         <TextView
@@ -45,8 +46,10 @@
         <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:isIndicator="true"
             android:numStars="5"
             android:rating="3.7"
+
             android:id="@+id/rating_bar"
             android:layout_gravity="center" />
 
