--- a/app/src/main/res/layout/display_activity.xml
+++ b/app/src/main/res/layout/display_activity.xml
@@ -1,63 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.example.android.popularmovies.DisplayActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical"
-        tools:context="com.example.android.popularmovies.DisplayActivity"
         android:id="@+id/backdrop"
-        android:background="#690000">
-
-        <TextView
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"/>
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_bar"
-            android:text="@string/title_bar"
-            android:layout_margin="4dp"
-            android:textSize="24sp"
-            android:textColor="#ffffff" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#40000000"
+            tools:context="com.example.android.popularmovies.DisplayActivity">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/release_date"
-            android:text="@string/release_date"
-            android:layout_margin="4dp"
-            android:textSize="12sp"
-            android:textColor="@color/abc_color_highlight_material" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_bar"
+                android:text="@string/title_bar"
+                android:layout_margin="4dp"
+                android:textSize="24sp"
+                android:textColor="#ffffff"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/sample_0"
-            android:id="@+id/poster"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="4dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/release_date"
+                android:text="@string/release_date"
+                android:layout_margin="4dp"
+                android:textSize="12sp"
+                android:textColor="#ffffff"/>
 
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:rating="3.7"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/poster"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="4dp" />
 
-            android:id="@+id/rating_bar"
-            android:layout_gravity="center" />
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:rating="3.7"
+                android:id="@+id/rating_bar"
+                android:background="#40000000"
+                android:layout_gravity="center"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/summary_text"
-            android:text="@string/summary_text"
-            android:layout_margin="4dp" />
-    </LinearLayout>
-</ScrollView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/summary_text"
+                android:text="@string/summary_text"
+                android:layout_margin="4dp"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
