--- a/app/src/main/res/layout/display_activity.xml
+++ b/app/src/main/res/layout/display_activity.xml
@@ -20,7 +20,7 @@
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="#40000000"
             tools:context="com.example.android.popularmovies.DisplayActivity">
@@ -47,7 +47,6 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/poster"
-                android:src="@drawable/sample_0"
                 android:scaleType="fitCenter"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="4dp" />
@@ -57,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:rating="3.7"
                 android:id="@+id/rating_bar"
                 android:background="#40000000"
                 android:layout_gravity="center"/>
