--- a/app/src/main/res/layout/grid_fragment.xml
+++ b/app/src/main/res/layout/grid_fragment.xml
@@ -2,18 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000069">
+    android:background="#FFFFFF"
+    android:gravity="fill_horizontal|center_vertical|fill_vertical|center_horizontal">
 
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gridview"
-        android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
+        android:numColumns="3"
         android:stretchMode="columnWidth"
-        android:gravity="center">
+        android:gravity="center|fill"
+        android:background="#000000">
     </GridView>
 
 </RelativeLayout>
