--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_size_title">24sp</dimen>
+    <dimen name="text_size_release">12sp</dimen>
+    <dimen name="text_size_description">18sp</dimen>
+
 </resources>
