--- a/app/src/main/res/layout/display_activity.xml
+++ b/app/src/main/res/layout/display_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.android.popularmovies.DisplayActivity">
+    tools:context="com.example.android.popularmovies.DisplayFragment">
 
     <ImageView
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@color/shady_background"
-            tools:context="com.example.android.popularmovies.DisplayActivity">
+            tools:context="com.example.android.popularmovies.DisplayFragment">
 
             <TextView
                 android:layout_width="match_parent"
