--- a/app/src/main/res/layout/display_activity.xml
+++ b/app/src/main/res/layout/display_activity.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.android.popularmovies.DisplayFragment">
-
-    <ImageView
+    android:background="#000000">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/backdrop"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop"/>
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        android:fillViewport="true"
+        android:layout_weight="1">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/shady_background"
-            tools:context="com.example.android.popularmovies.DisplayFragment">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,7 +20,6 @@
                 android:layout_margin="4dp"
                 android:textSize="@dimen/text_size_title"
                 android:textColor="@color/color_text_display_activity"/>
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,15 +28,13 @@
                 android:layout_margin="4dp"
                 android:textSize="@dimen/text_size_release"
                 android:textColor="@color/color_text_display_activity"/>
-
             <ImageView
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:id="@+id/poster"
+                android:layout_width="wrap_content"
+                android:id="@+id/posterpath"
                 android:scaleType="fitCenter"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="4dp" />
-
+                android:layout_margin="4dp"
+                android:src="@drawable/tupac" />
             <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,7 +43,6 @@
                 android:id="@+id/rating_bar"
                 android:background="@color/shady_background"
                 android:layout_gravity="center"/>
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,4 +53,19 @@
                 android:textColor="@color/color_text_display_activity"/>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="?android:attr/listPreferredItemHeight"
+        android:layout_height="match_parent">
+        <ImageButton
+            android:layout_width="?android:attr/listPreferredItemHeight"
+            android:layout_height="?android:attr/listPreferredItemHeight"
+            android:src="@drawable/tupac"
+            android:scaleType="centerCrop"/>
+        <ListView
+            android:layout_width="?android:attr/listPreferredItemHeight"
+            android:layout_height="match_parent"
+            android:id="@+id/display_list_view"
+            android:layout_weight="1"/>
+    </LinearLayout>
+</LinearLayout>
