GridFragment - Moved most of the onCreateView to onResume to allow for the change to take place when user moves back from menuActivity.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,4 +16,17 @@
 
     <string name="preferences_entryValue_sort_by_popularity">sort_by_popularity</string>
     <string name="preferences_entryValue_sort_by_rating">sort_by_rating</string>
+
+
+    <string-array name="sortOrderArray">
+        <item>Most Popular Movies</item>
+        <item>Top Rated Movies</item>
+        <item>My Favorites</item>
+    </string-array>
+
+    <string-array name="sortOrderValues">
+        <item>popular</item>
+        <item>topRated</item>
+        <item>favorites</item>
+    </string-array>
 </resources>
