--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,18 +4,25 @@
     <string-array name="preferences_entries_sort_by">
         <item>@string/preferences_entry_sort_by_popularity</item>
         <item>@string/preferences_entry_sort_by_rating</item>
+        <item>@string/preferences_entry_sort_by_favorites</item>
+
     </string-array>
 
     <string name="preferences_entry_sort_by_popularity">Popularity</string>
     <string name="preferences_entry_sort_by_rating">Rating</string>
+    <string name="preferences_entry_sort_by_favorites">Favorites</string>
+
 
     <string-array name="preferences_entryValues_sort_by">
         <item>@string/preferences_entryValue_sort_by_popularity</item>
         <item>@string/preferences_entryValue_sort_by_rating</item>
+        <item>@string/preferences_entryValue_sort_by_favorites</item>
     </string-array>
 
     <string name="preferences_entryValue_sort_by_popularity">sort_by_popularity</string>
     <string name="preferences_entryValue_sort_by_rating">sort_by_rating</string>
+    <string name="preferences_entryValue_sort_by_favorites">sort_by_favorites</string>
+
 
 
     <string-array name="sortOrderArray">
